@@ -3,6 +3,8 @@ package com.example.spotifysmartifybe.service;
 import com.example.spotifysmartifybe.config.SpotifyApiFactory;
 import com.example.spotifysmartifybe.exception.SpotifyApiException;
 import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import se.michaelthelin.spotify.exceptions.detailed.UnauthorizedException;
 import se.michaelthelin.spotify.model_objects.specification.Track;
@@ -15,6 +17,8 @@ import java.util.List;
 @RequiredArgsConstructor
 public class UserService {
 
+    private static final Logger log = LoggerFactory.getLogger(UserService.class);
+
     private final SpotifyApiFactory spotifyApiFactory;
 
     public User getCurrentUserProfile(String accessToken) throws UnauthorizedException {
@@ -24,8 +28,10 @@ public class UserService {
                     .build()
                     .execute();
         } catch (UnauthorizedException e) {
+            log.warn("Unauthorized access to user profile", e);
             throw e;
         } catch (Exception e) {
+            log.error("Failed to fetch user profile", e);
             throw new SpotifyApiException("Failed to fetch user profile", e);
         }
     }
@@ -39,10 +45,12 @@ public class UserService {
                     .build()
                     .execute()
                     .getItems();
-            return Arrays.asList(items);
+            return items != null ? Arrays.asList(items) : List.of();
         } catch (UnauthorizedException e) {
+            log.warn("Unauthorized access to top tracks", e);
             throw e;
         } catch (Exception e) {
+            log.error("Failed to fetch top tracks", e);
             throw new SpotifyApiException("Failed to fetch top tracks", e);
         }
     }
